Fix usage of getFirst (incompatible with Java 17)